<resources>
    <string name="app_name">FirstMission</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Коммунальное хозяйство</string>
    <string name="status">В работе</string>
    <string name="created">Сделано</string>
    <string name="createdDate">25 февраля 2016</string>
    <string name="detected">обнаружено</string>
    <string name="detectedDate">26 февраля 2016</string>
    <string name="deadline">устранить до</string>
    <string name="deadLineDate">29 февраля 2016</string>
    <string name="master">ответственный</string>
    <string name="masterName">Днепропетровский ГИК</string>
    <string name="description">Открытый люк(возле рекламного щита), район поворота 18 и 19 трамваев на проспект Мира с Донецкого шоссе</string>
</resources>
