<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_height"
                    android:layout_marginBottom="@dimen/my_margin"
                    android:text="@string/name"
                    android:gravity="center_vertical"
                    android:id="@+id/textView1"/>
            <TextView
                    android:layout_width="@dimen/custom_length"
                    android:layout_height="@dimen/custom_height"
                    android:background="@drawable/cutorm_text_view"
                    android:layout_marginBottom="@dimen/my_margin"
                    android:text="@string/status"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:id="@+id/textView2"
                    >

            </TextView>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grey_line_height"
                    android:background="@color/grey"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_height"

                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/created"
                        android:gravity="center_vertical"
                        android:textColor="@color/grey"
                        android:id="@+id/textView3"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView4"
                        android:text="@string/createdDate"
                        android:gravity="center_vertical"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grey_line_height"
                    android:background="@color/grey"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_height"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/detected"
                        android:gravity="center_vertical"
                        android:textColor="@color/grey"
                        android:id="@+id/textView5"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/detectedDate"
                        android:id="@+id/textView6"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grey_line_height"
                    android:background="@color/grey"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_height"

                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/deadline"
                        android:gravity="center_vertical"
                        android:textColor="@color/grey"
                        android:id="@+id/textView7"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/deadLineDate"
                        android:id="@+id/textView8"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grey_line_height"
                    android:background="@color/grey"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_height"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/master"
                        android:gravity="center_vertical"
                        android:textColor="@color/grey"
                        android:id="@+id/textView9"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/masterName"
                        android:id="@+id/textView10"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grey_line_height"
                    android:background="@color/grey"
                    android:layout_marginBottom="@dimen/my_margin"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:id="@+id/textView11"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/recycler_view_height"
                    android:scrollbars="horizontal"
                    android:id="@+id/recyclerView"
                    />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
